--- a/src/Keyboard.module.css
+++ b/src/Keyboard.module.css
@@ -1,11 +1,12 @@
 .btn {
-  width: 100%;
+  width: 80%;
   border: 3px solid orange;
+  border-radius: 5px;
   background: none;
   aspect-ratio: 1 / 1;
-  font-size: 2.5rem;
+  font-size: 1.4rem;
   text-transform: uppercase;
-  padding: .5rem;
+  padding: .2rem;
   font-weight: bold;
   cursor: pointer;
   color: orange;
