--- a/src/Keyboard.module.css
+++ b/src/Keyboard.module.css
@@ -1,6 +1,6 @@
 .btn {
   width: 80%;
-  border: 3px solid orange;
+  border: 3px solid #ff6600;
   border-radius: 5px;
   background: none;
   aspect-ratio: 1 / 1;
@@ -9,7 +9,7 @@
   padding: .2rem;
   font-weight: bold;
   cursor: pointer;
-  color: orange;
+  color: #ff6600;
 }
 
 .btn.active {
